--- a/app/src/main/res/layout/layout_appointment_header.xml
+++ b/app/src/main/res/layout/layout_appointment_header.xml
@@ -45,6 +45,7 @@
                     tools:text="王二小" />
 
                 <ImageView
+                    android:id="@+id/img_gender"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_gravity="center_vertical"
