--- a/cdcommon/src/main/res/layout/activity_modify_password.xml
+++ b/cdcommon/src/main/res/layout/activity_modify_password.xml
@@ -1,192 +1,249 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#F0F0F0"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/lineColor" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
+            android:layout_height="match_parent"
+            android:background="#F0F0F0"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    android:text="手机号"
-                    android:textColor="@color/fontColor_gray"
-                    android:textSize="15sp" />
-
-                <EditText
-                    android:id="@+id/edt_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:background="@null"
-                    android:gravity="center_vertical"
-                    android:hint="请输入手机号码"
-                    android:inputType="number"
-                    android:maxLength="11"
-                    android:textColor="@color/fontColor_gray"
-                    android:textColorHint="@color/fontColor_hint"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#F0F0F0" />
+                android:layout_height="0.5dp"
+                android:background="@color/lineColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    android:text="验证码"
-                    android:textColor="@color/fontColor_gray"
-                    android:textSize="15sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/edt_code"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:gravity="center_vertical"
-                    android:hint="请输入验证码"
-                    android:inputType="number"
-                    android:maxLength="4"
-                    android:textColor="@color/fontColor_gray"
-                    android:textColorHint="@color/fontColor_hint"
-                    android:textSize="14sp" />
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"
+                        android:text="手机号"
+                        android:textColor="@color/fontColor_gray"
+                        android:textSize="15sp" />
 
-                <Button
-                    android:id="@+id/btn_send"
-                    android:layout_width="80dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/btn_select_common"
-                    android:gravity="center"
-                    android:text="获取验证码"
-                    android:textColor="@color/white"
-                    android:textSize="12sp" />
+                    <EditText
+                        android:id="@+id/edt_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="请输入手机号码"
+                        android:inputType="number"
+                        android:maxLength="11"
+                        android:textColor="@color/fontColor_gray"
+                        android:textColorHint="@color/fontColor_hint"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F0F0F0" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"
+                        android:text="验证码"
+                        android:textColor="@color/fontColor_gray"
+                        android:textSize="15sp" />
+
+                    <EditText
+                        android:id="@+id/edt_code"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="请输入验证码"
+                        android:inputType="number"
+                        android:maxLength="4"
+                        android:textColor="@color/fontColor_gray"
+                        android:textColorHint="@color/fontColor_hint"
+                        android:textSize="14sp" />
+
+                    <Button
+                        android:id="@+id/btn_send"
+                        android:layout_width="80dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@drawable/btn_select_common"
+                        android:gravity="center"
+                        android:text="获取验证码"
+                        android:textColor="@color/white"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:orientation="vertical">
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    android:text="新密码"
-                    android:textColor="@color/fontColor_gray"
-                    android:textSize="15sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/edt_password"
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"
+                        android:text="新密码"
+                        android:textColor="@color/fontColor_gray"
+                        android:textSize="15sp" />
+
+                    <EditText
+                        android:id="@+id/edt_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="不少于6位"
+                        android:inputType="textPassword"
+                        android:textColor="@color/fontColor_gray"
+                        android:textColorHint="@color/fontColor_hint"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F0F0F0" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"
+                        android:text="确认密码"
+                        android:textColor="@color/fontColor_gray"
+                        android:textSize="15sp" />
+
+                    <EditText
+                        android:id="@+id/edt_repassword"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="不少于6位"
+                        android:inputType="textPassword"
+                        android:textColor="@color/fontColor_gray"
+                        android:textColorHint="@color/fontColor_hint"
+                        android:textSize="14sp" />
+
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F0F0F0" />
+
+
+                <LinearLayout
+                    android:id="@+id/lin_login_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:background="@null"
-                    android:gravity="center_vertical"
-                    android:hint="不少于6位"
-                    android:inputType="textPassword"
-                    android:textColor="@color/fontColor_gray"
-                    android:textColorHint="@color/fontColor_hint"
-                    android:textSize="14sp" />
+                    android:orientation="horizontal"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="15dp">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp"
+                        android:text="选择角色"
+                        android:textColor="@color/fontColor_gray"
+                        android:textSize="15sp" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#F0F0F0" />
+                    <TextView
+                        android:id="@+id/tv_logintype"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:background="@null"
+                        android:hint="请选择角色"
+                        android:maxLines="1"
+                        android:textColorHint="@color/text_hint_color"
+                        android:textSize="14sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    android:text="确认密码"
-                    android:textColor="@color/fontColor_gray"
-                    android:textSize="15sp" />
 
-                <EditText
-                    android:id="@+id/edt_repassword"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:gravity="center_vertical"
-                    android:hint="不少于6位"
-                    android:inputType="textPassword"
-                    android:textColor="@color/fontColor_gray"
-                    android:textColorHint="@color/fontColor_hint"
-                    android:textSize="14sp" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="15dp"
+                        android:src="@drawable/more_right" />
+
+                </LinearLayout>
 
 
             </LinearLayout>
+
+
+            <Button
+                android:id="@+id/btn_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/btn_select_common"
+                android:text="确定"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
 
         </LinearLayout>
-
-
-        <Button
-            android:id="@+id/btn_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/btn_select_common"
-            android:text="确定"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+    </ScrollView>
 </layout>
