--- a/app/src/main/res/layout/activity_happymsg_details.xml
+++ b/app/src/main/res/layout/activity_happymsg_details.xml
@@ -43,7 +43,7 @@
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_marginLeft="@dimen/layout_left_interval"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/default_pic" />
                 <TextView
                     android:id="@+id/tv_title"
