--- a/app/src/main/res/layout/item_brand_firstpage.xml
+++ b/app/src/main/res/layout/item_brand_firstpage.xml
@@ -13,10 +13,10 @@
         android:layout_marginRight="8dp">
 
         <ImageView
+            android:scaleType="centerCrop"
             android:id="@+id/img_brand"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:scaleType="centerCrop"
             android:src="@drawable/default_pic" />
 
 
@@ -32,9 +32,9 @@
         android:layout_marginTop="12dp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:text="sdfsdfsdfsfsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsfd"
         android:textColor="@color/app_txt_black"
-        android:textSize="16sp"
-        android:text="sdfsdfsdfsfsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsfd" />
+        android:textSize="16sp" />
 
 
 </LinearLayout>
