--- a/app/src/main/res/layout/item_happy_msg.xml
+++ b/app/src/main/res/layout/item_happy_msg.xml
@@ -14,6 +14,7 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginLeft="@dimen/layout_left_interval"
+        android:scaleType="fitXY"
         android:src="@drawable/default_pic" />
 
     <TextView
