--- a/app/src/main/res/layout/layout_flexbox.xml
+++ b/app/src/main/res/layout/layout_flexbox.xml
@@ -6,9 +6,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingBottom="15dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="15dp">
+
 
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/flexbox_layout"
