--- a/app/src/main/res/layout/fragment_first_page.xml
+++ b/app/src/main/res/layout/fragment_first_page.xml
@@ -13,7 +13,7 @@
             android:layout_height="45dp"
             android:background="@color/app_txt_red"
             android:gravity="center"
-            android:text="@string/app_name"
+            android:text="首页"
             android:textColor="@color/white"
             android:textSize="@dimen/top_center_title_size" />
 
